objects/FM_Test__c.object
<CustomObject>
    <fields>
        <fullName>Test2__c</fullName>
        <label>Test2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test3__c</fullName>
        <label>Test3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test1__c</fullName>
        <label>test1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>FM Test</label>
    <nameField>
        <label>FM Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FM Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>